# SplatScratch

./: README.md  pyproject.toml  scratch.ipynb  top_500.ipynb
graphing/: utils.py
graphing/setup/: squidalytics_style.py
parsing/splatoon3_ink/: parse.py  schedules.py
scraping/: leanny.py
scraping/scripts/: splatoon3_ink.sh
scraping/splatoon3_ink/: splatoon3_ink.py  splatoon3_ink_scrapy.py
