[tool.poetry]
name = "splatscratch"
version = "0.1.0"
description = "Scratch work for splatoon analysis"
authors = ["Cesar E Garza <cesar@cegarza.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.15.0"
networkx = "^3.1"
dash = "^2.11.1"
ipykernel = "^6.24.0"
statsmodels = "^0.14.0"
bs4 = "^0.0.1"
selenium = "^4.10.0"
tqdm = "^4.65.0"
scrapy = "^2.9.0"
splatstats = "^2.1.1"
nbformat = "^5.9.1"
bokeh = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
